# systemy-wbudowane-zaliczenie-2

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: diagnostics.h  student_output.h  system_info.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  diagnostics.cpp  main.cpp  student.output.cpp  student_output.cpp  system_info.cpp
